bin/Debug/ProbSQLParser.java
// Generated from ProbSQL.g4 by ANTLR 4.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class ProbSQLParser extends Parser {
	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		EQ=1, NOT_EQ=2, GTH=3, GET=4, LTH=5, LET=6, LTH_IN=7, LTH_IG=8, LTH_PC=9, 
		LTH_ME=10, LET_IN=11, LET_IG=12, LET_PC=13, LET_ME=14, GTH_IN=15, GTH_IG=16, 
		GTH_PC=17, GTH_ME=18, GET_IN=19, GET_IG=20, GET_PC=21, GET_ME=22, OR_SYM=23, 
		AND_SYM=24, NOT_SYM=25, EQUAL_IN=26, EQUAL_IG=27, EQUAL_PC=28, EQUAL_ME=29, 
		UNEQUAL_IN=30, UNEQUAL_IG=31, UNEQUAL_PC=32, UNEQUAL_ME=33, CONJ_IN=34, 
		CONJ_IG=35, CONJ_PC=36, CONJ_ME=37, DISJ_IN=38, DISJ_IG=39, DISJ_PC=40, 
		DISJ_ME=41, DIFF_IN=42, DIFF_IG=43, DIFF_PC=44, DIFF_ME=45, JOIN_IN=46, 
		JOIN_IG=47, JOIN_PC=48, JOIN_ME=49, UNION_IN=50, UNION_IG=51, UNION_PC=52, 
		UNION_ME=53, INTERSECT_IN=54, INTERSECT_IG=55, INTERSECT_PC=56, INTERSECT_ME=57, 
		MINUS_IN=58, MINUS_IG=59, MINUS_PC=60, MINUS_ME=61, IN_IN=62, IN_IG=63, 
		IN_PC=64, IN_ME=65, NOT_IN_IN=66, NOT_IN_IG=67, NOT_IN_PC=68, NOT_IN_ME=69, 
		PLUS=70, MINUS=71, DOT=72, COMMA=73, ASTERISK=74, RPAREN=75, LPAREN=76, 
		RBRACK=77, LBRACK=78, WS=79, SELECT=80, FROM=81, WHERE=82, TRUE_SYM=83, 
		FALSE_SYM=84, INTEGER_NUM=85, HEX_DIGIT=86, BIT_NUM=87, REAL_NUMBER=88, 
		TEXT_STRING=89, ID=90;
	public static final String[] tokenNames = {
		"<INVALID>", "EQ", "NOT_EQ", "'>'", "'>='", "'<'", "'<='", "LTH_IN", "LTH_IG", 
		"LTH_PC", "LTH_ME", "LET_IN", "LET_IG", "LET_PC", "LET_ME", "GTH_IN", 
		"GTH_IG", "GTH_PC", "GTH_ME", "GET_IN", "GET_IG", "GET_PC", "GET_ME", 
		"OR_SYM", "AND_SYM", "NOT_SYM", "EQUAL_IN", "EQUAL_IG", "EQUAL_PC", "EQUAL_ME", 
		"UNEQUAL_IN", "UNEQUAL_IG", "UNEQUAL_PC", "UNEQUAL_ME", "CONJ_IN", "CONJ_IG", 
		"CONJ_PC", "CONJ_ME", "DISJ_IN", "DISJ_IG", "DISJ_PC", "DISJ_ME", "DIFF_IN", 
		"DIFF_IG", "DIFF_PC", "DIFF_ME", "JOIN_IN", "JOIN_IG", "JOIN_PC", "JOIN_ME", 
		"UNION_IN", "UNION_IG", "UNION_PC", "UNION_ME", "INTERSECT_IN", "INTERSECT_IG", 
		"INTERSECT_PC", "INTERSECT_ME", "MINUS_IN", "MINUS_IG", "MINUS_PC", "MINUS_ME", 
		"IN_IN", "IN_IG", "IN_PC", "IN_ME", "NOT_IN_IN", "NOT_IN_IG", "NOT_IN_PC", 
		"NOT_IN_ME", "'+'", "'-'", "'.'", "','", "'*'", "')'", "'('", "']'", "'['", 
		"WS", "SELECT", "FROM", "WHERE", "TRUE_SYM", "FALSE_SYM", "INTEGER_NUM", 
		"HEX_DIGIT", "BIT_NUM", "REAL_NUMBER", "TEXT_STRING", "ID"
	};
	public static final int
		RULE_init = 0, RULE_compare_value_operator = 1, RULE_compare_attribute_operator = 2, 
		RULE_expression_connector = 3, RULE_condition_connector = 4, RULE_join_operator = 5, 
		RULE_relation_connector = 6, RULE_subquery_operator = 7, RULE_string_literal = 8, 
		RULE_number_literal = 9, RULE_hex_literal = 10, RULE_boolean_literal = 11, 
		RULE_bit_literal = 12, RULE_literal_value = 13, RULE_scheme_name = 14, 
		RULE_attribute_name = 15, RULE_relation_name = 16, RULE_select_statement = 17, 
		RULE_select_expression = 18, RULE_attribute_list = 19, RULE_attribute = 20, 
		RULE_where_clause = 21, RULE_selection_condition = 22, RULE_selection_condition_atom = 23, 
		RULE_subquery = 24, RULE_probabilistic_interval = 25, RULE_expression = 26, 
		RULE_expression_atom = 27, RULE_join_relation_list = 28;
	public static final String[] ruleNames = {
		"init", "compare_value_operator", "compare_attribute_operator", "expression_connector", 
		"condition_connector", "join_operator", "relation_connector", "subquery_operator", 
		"string_literal", "number_literal", "hex_literal", "boolean_literal", 
		"bit_literal", "literal_value", "scheme_name", "attribute_name", "relation_name", 
		"select_statement", "select_expression", "attribute_list", "attribute", 
		"where_clause", "selection_condition", "selection_condition_atom", "subquery", 
		"probabilistic_interval", "expression", "expression_atom", "join_relation_list"
	};

	@Override
	public String getGrammarFileName() { return "ProbSQL.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public ProbSQLParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class InitContext extends ParserRuleContext {
		public Select_statementContext select_statement() {
			return getRuleContext(Select_statementContext.class,0);
		}
		public InitContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_init; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProbSQLListener ) ((ProbSQLListener)listener).enterInit(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProbSQLListener ) ((ProbSQLListener)listener).exitInit(this);
		}
	}

	public final InitContext init() throws RecognitionException {
		InitContext _localctx = new InitContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_init);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(58); select_statement();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Compare_value_operatorContext extends ParserRuleContext {
		public TerminalNode GTH() { return getToken(ProbSQLParser.GTH, 0); }
		public TerminalNode LTH() { return getToken(ProbSQLParser.LTH, 0); }
		public TerminalNode NOT_EQ() { return getToken(ProbSQLParser.NOT_EQ, 0); }
		public TerminalNode EQ() { return getToken(ProbSQLParser.EQ, 0); }
		public TerminalNode LET() { return getToken(ProbSQLParser.LET, 0); }
		public TerminalNode GET() { return getToken(ProbSQLParser.GET, 0); }
		public Compare_value_operatorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_compare_value_operator; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProbSQLListener ) ((ProbSQLListener)listener).enterCompare_value_operator(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProbSQLListener ) ((ProbSQLListener)listener).exitCompare_value_operator(this);
		}
	}

	public final Compare_value_operatorContext compare_value_operator() throws RecognitionException {
		Compare_value_operatorContext _localctx = new Compare_value_operatorContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_compare_value_operator);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(60);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << EQ) | (1L << NOT_EQ) | (1L << GTH) | (1L << GET) | (1L << LTH) | (1L << LET))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			consume();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Compare_attribute_operatorContext extends ParserRuleContext {
		public TerminalNode UNEQUAL_IN() { return getToken(ProbSQLParser.UNEQUAL_IN, 0); }
		public TerminalNode LTH_IN() { return getToken(ProbSQLParser.LTH_IN, 0); }
		public TerminalNode GTH_PC() { return getToken(ProbSQLParser.GTH_PC, 0); }
		public TerminalNode UNEQUAL_ME() { return getToken(ProbSQLParser.UNEQUAL_ME, 0); }
		public TerminalNode LTH_PC() { return getToken(ProbSQLParser.LTH_PC, 0); }
		public TerminalNode GET_PC() { return getToken(ProbSQLParser.GET_PC, 0); }
		public TerminalNode GET_ME() { return getToken(ProbSQLParser.GET_ME, 0); }
		public TerminalNode EQUAL_IN() { return getToken(ProbSQLParser.EQUAL_IN, 0); }
		public TerminalNode LTH_ME() { return getToken(ProbSQLParser.LTH_ME, 0); }
		public TerminalNode GET_IG() { return getToken(ProbSQLParser.GET_IG, 0); }
		public TerminalNode EQUAL_PC() { return getToken(ProbSQLParser.EQUAL_PC, 0); }
		public TerminalNode LET_ME() { return getToken(ProbSQLParser.LET_ME, 0); }
		public TerminalNode EQUAL_ME() { return getToken(ProbSQLParser.EQUAL_ME, 0); }
		public TerminalNode LET_IG() { return getToken(ProbSQLParser.LET_IG, 0); }
		public TerminalNode GTH_IN() { return getToken(ProbSQLParser.GTH_IN, 0); }
		public TerminalNode UNEQUAL_PC() { return getToken(ProbSQLParser.UNEQUAL_PC, 0); }
		public TerminalNode EQUAL_IG() { return getToken(ProbSQLParser.EQUAL_IG, 0); }
		public TerminalNode LET_IN() { return getToken(ProbSQLParser.LET_IN, 0); }
		public TerminalNode LTH_IG() { return getToken(ProbSQLParser.LTH_IG, 0); }
		public TerminalNode GTH_ME() { return getToken(ProbSQLParser.GTH_ME, 0); }
		public TerminalNode UNEQUAL_IG() { return getToken(ProbSQLParser.UNEQUAL_IG, 0); }
		public TerminalNode GTH_IG() { return getToken(ProbSQLParser.GTH_IG, 0); }
		public TerminalNode GET_IN() { return getToken(ProbSQLParser.GET_IN, 0); }
		public TerminalNode LET_PC() { return getToken(ProbSQLParser.LET_PC, 0); }
		public Compare_attribute_operatorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_compare_attribute_operator; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProbSQLListener ) ((ProbSQLListener)listener).enterCompare_attribute_operator(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProbSQLListener ) ((ProbSQLListener)listener).exitCompare_attribute_operator(this);
		}
	}

	public final Compare_attribute_operatorContext compare_attribute_operator() throws RecognitionException {
		Compare_attribute_operatorContext _localctx = new Compare_attribute_operatorContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_compare_attribute_operator);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(62);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << LTH_IN) | (1L << LTH_IG) | (1L << LTH_PC) | (1L << LTH_ME) | (1L << LET_IN) | (1L << LET_IG) | (1L << LET_PC) | (1L << LET_ME) | (1L << GTH_IN) | (1L << GTH_IG) | (1L << GTH_PC) | (1L << GTH_ME) | (1L << GET_IN) | (1L << GET_IG) | (1L << GET_PC) | (1L << GET_ME) | (1L << EQUAL_IN) | (1L << EQUAL_IG) | (1L << EQUAL_PC) | (1L << EQUAL_ME) | (1L << UNEQUAL_IN) | (1L << UNEQUAL_IG) | (1L << UNEQUAL_PC) | (1L << UNEQUAL_ME))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			consume();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Expression_connectorContext extends ParserRuleContext {
		public TerminalNode DISJ_IN() { return getToken(ProbSQLParser.DISJ_IN, 0); }
		public TerminalNode DIFF_ME() { return getToken(ProbSQLParser.DIFF_ME, 0); }
		public TerminalNode DIFF_IN() { return getToken(ProbSQLParser.DIFF_IN, 0); }
		public TerminalNode CONJ_IG() { return getToken(ProbSQLParser.CONJ_IG, 0); }
		public TerminalNode CONJ_PC() { return getToken(ProbSQLParser.CONJ_PC, 0); }
		public TerminalNode DISJ_IG() { return getToken(ProbSQLParser.DISJ_IG, 0); }
		public TerminalNode DIFF_IG() { return getToken(ProbSQLParser.DIFF_IG, 0); }
		public TerminalNode CONJ_IN() { return getToken(ProbSQLParser.CONJ_IN, 0); }
		public TerminalNode DISJ_ME() { return getToken(ProbSQLParser.DISJ_ME, 0); }
		public TerminalNode CONJ_ME() { return getToken(ProbSQLParser.CONJ_ME, 0); }
		public TerminalNode DISJ_PC() { return getToken(ProbSQLParser.DISJ_PC, 0); }
		public TerminalNode DIFF_PC() { return getToken(ProbSQLParser.DIFF_PC, 0); }
		public Expression_connectorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expression_connector; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProbSQLListener ) ((ProbSQLListener)listener).enterExpression_connector(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProbSQLListener ) ((ProbSQLListener)listener).exitExpression_connector(this);
		}
	}

	public final Expression_connectorContext expression_connector() throws RecognitionException {
		Expression_connectorContext _localctx = new Expression_connectorContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_expression_connector);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(64);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << CONJ_IN) | (1L << CONJ_IG) | (1L << CONJ_PC) | (1L << CONJ_ME) | (1L << DISJ_IN) | (1L << DISJ_IG) | (1L << DISJ_PC) | (1L << DISJ_ME) | (1L << DIFF_IN) | (1L << DIFF_IG) | (1L << DIFF_PC) | (1L << DIFF_ME))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			consume();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Condition_connectorContext extends ParserRuleContext {
		public TerminalNode AND_SYM() { return getToken(ProbSQLParser.AND_SYM, 0); }
		public TerminalNode OR_SYM() { return getToken(ProbSQLParser.OR_SYM, 0); }
		public Condition_connectorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_condition_connector; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProbSQLListener ) ((ProbSQLListener)listener).enterCondition_connector(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProbSQLListener ) ((ProbSQLListener)listener).exitCondition_connector(this);
		}
	}

	public final Condition_connectorContext condition_connector() throws RecognitionException {
		Condition_connectorContext _localctx = new Condition_connectorContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_condition_connector);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(66);
			_la = _input.LA(1);
			if ( !(_la==OR_SYM || _la==AND_SYM) ) {
			_errHandler.recoverInline(this);
			}
			consume();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Join_operatorContext extends ParserRuleContext {
		public TerminalNode JOIN_IN() { return getToken(ProbSQLParser.JOIN_IN, 0); }
		public TerminalNode JOIN_IG() { return getToken(ProbSQLParser.JOIN_IG, 0); }
		public TerminalNode JOIN_PC() { return getToken(ProbSQLParser.JOIN_PC, 0); }
		public TerminalNode JOIN_ME() { return getToken(ProbSQLParser.JOIN_ME, 0); }
		public Join_operatorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_join_operator; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProbSQLListener ) ((ProbSQLListener)listener).enterJoin_operator(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProbSQLListener ) ((ProbSQLListener)listener).exitJoin_operator(this);
		}
	}
